RESOLVED FIXED 275743
[Navigation] Fix regression caused by r280109
https://bugs.webkit.org/show_bug.cgi?id=275743
Summary [Navigation] Fix regression caused by r280109
Rob Buis
Reported 2024-06-21 11:48:52 PDT
Fix regression caused by r280109.
Attachments
Rob Buis
Comment 1 2024-06-21 11:53:39 PDT
Rob Buis
Comment 2 2024-06-25 02:06:23 PDT
Radar WebKit Bug Importer
Comment 3 2024-06-25 02:07:14 PDT
Note You need to log in before you can comment on or make changes to this bug.