[Navigation] Fix regression caused by r280109 https://bugs.webkit.org/show_bug.cgi?id=275743

Reviewed by NOBODY (OOPS!).

In r280109 an early return was added in FrameLoader::loadPostRequest, but
the completion handler was not called, causing avigate-event/navigate-form.html
to assert in Debug, this PR fixes that.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadPostRequest):