Source/WebCore/loader/FrameLoader.cpp
@@ -3437,8 +3437,10 @@ void FrameLoader::loadPostRequest(FrameLoadRequest&& request, const String& refe
     }
 
     if (request.requesterSecurityOrigin().isSameOriginDomain(frame->document()->securityOrigin())) {
-        if (!dispatchNavigateEvent(url, loadType, action, request.navigationHistoryBehavior(), false, formState.get()))
+        if (!dispatchNavigateEvent(url, loadType, action, request.navigationHistoryBehavior(), false, formState.get())) {
+            completionHandler();
             return;
+        }
     }
 
     // must grab this now, since this load may stop the previous load and clear this flag
